--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,14 +12,14 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 2 */
 }
-​
+
 /**
  * Remove default margin.
  */
 body {
   margin: 0;
 }
-​
+
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -43,7 +43,7 @@ section,
 summary {
   display: block;
 }
-​
+
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
@@ -57,7 +57,7 @@ video {
   vertical-align: baseline;
   /* 2 */
 }
-​
+
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
@@ -66,7 +66,7 @@ audio:not([controls]) {
   display: none;
   height: 0;
 }
-​
+
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
  * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
@@ -75,7 +75,7 @@ audio:not([controls]) {
 template {
   display: none;
 }
-​
+
 /* Links
    ========================================================================== */
 /**
@@ -84,7 +84,7 @@ template {
 a {
   background-color: transparent;
 }
-​
+
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
@@ -92,7 +92,7 @@ a:active,
 a:hover {
   outline: 0;
 }
-​
+
 /* Text-level semantics
    ========================================================================== */
 /**
@@ -101,7 +101,7 @@ a:hover {
 abbr[title] {
   border-bottom: 1px dotted;
 }
-​
+
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
  */
@@ -109,14 +109,14 @@ b,
 strong {
   font-weight: bold;
 }
-​
+
 /**
  * Address styling not present in Safari and Chrome.
  */
 dfn {
   font-style: italic;
 }
-​
+
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari, and Chrome.
@@ -125,7 +125,7 @@ h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
-​
+
 /**
  * Address styling not present in IE 8/9.
  */
@@ -133,14 +133,14 @@ mark {
   background: #ff0;
   color: #000;
 }
-​
+
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 small {
   font-size: 80%;
 }
-​
+
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
@@ -151,15 +151,15 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
-​
+
 sup {
   top: -0.5em;
 }
-​
+
 sub {
   bottom: -0.25em;
 }
-​
+
 /* Embedded content
    ========================================================================== */
 /**
@@ -168,14 +168,14 @@ sub {
 img {
   border: 0;
 }
-​
+
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
 svg:not(:root) {
   overflow: hidden;
 }
-​
+
 /* Grouping content
    ========================================================================== */
 /**
@@ -184,7 +184,7 @@ svg:not(:root) {
 figure {
   margin: 1em 40px;
 }
-​
+
 /**
  * Address differences between Firefox and other browsers.
  */
@@ -193,14 +193,14 @@ hr {
   box-sizing: content-box;
   height: 0;
 }
-​
+
 /**
  * Contain overflow in all browsers.
  */
 pre {
   overflow: auto;
 }
-​
+
 /**
  * Address odd `em`-unit font size rendering in all browsers.
  */
@@ -211,7 +211,7 @@ samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
-​
+
 /* Forms
    ========================================================================== */
 /**
@@ -236,14 +236,14 @@ textarea {
   margin: 0;
   /* 3 */
 }
-​
+
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
 button {
   overflow: visible;
 }
-​
+
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
  * All other form control elements do not inherit `text-transform` values.
@@ -254,7 +254,7 @@ button,
 select {
   text-transform: none;
 }
-​
+
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
  *    and `video` controls.
@@ -271,7 +271,7 @@ input[type="submit"] {
   cursor: pointer;
   /* 3 */
 }
-​
+
 /**
  * Re-set default cursor for disabled elements.
  */
@@ -279,7 +279,7 @@ button[disabled],
 html input[disabled] {
   cursor: default;
 }
-​
+
 /**
  * Remove inner padding and border in Firefox 4+.
  */
@@ -288,7 +288,7 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
-​
+
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
@@ -296,7 +296,7 @@ input::-moz-focus-inner {
 input {
   line-height: normal;
 }
-​
+
 /**
  * It's recommended that you don't attempt to style these elements.
  * Firefox's implementation doesn't respect box-sizing, padding, or width.
@@ -311,7 +311,7 @@ input[type="radio"] {
   padding: 0;
   /* 2 */
 }
-​
+
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
  * `font-size` values of the `input`, it causes the cursor style of the
@@ -321,7 +321,7 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
-​
+
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
  * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
@@ -335,7 +335,7 @@ input[type="search"] {
   /* 2 */
   box-sizing: content-box;
 }
-​
+
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
  * Safari (but not Chrome) clips the cancel button when the search input has
@@ -345,7 +345,7 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-​
+
 /**
  * Define consistent border, margin, and padding.
  */
@@ -354,7 +354,7 @@ fieldset {
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
-​
+
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
@@ -365,14 +365,14 @@ legend {
   padding: 0;
   /* 2 */
 }
-​
+
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
 textarea {
   overflow: auto;
 }
-​
+
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
  * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
@@ -380,7 +380,7 @@ textarea {
 optgroup {
   font-weight: bold;
 }
-​
+
 /* Tables
    ========================================================================== */
 /**
@@ -390,25 +390,24 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-​
+
 td,
 th {
   padding: 0;
 }
-​
+
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-
 body {
   font: 300 14px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background: #eee;
   margin: 0;
   padding: 0;
 }
-​
+
 /* Tabs
    ========================================================================== */
 .tabs {
@@ -417,16 +416,16 @@ body {
   border: 1px solid #e5e5e5;
   border-radius: 3px;
 }
-​
+
 .tabs__labels {
   margin: 0;
   padding: 0;
 }
-​
+
 .tabs__labels li {
   display: inline-block;
 }
-​
+
 .tabs__labels li a {
   padding: 8px 12px;
   display: block;
@@ -434,24 +433,23 @@ body {
   text-decoration: none;
   border-bottom: 2px solid #f5f5f5;
 }
-​
+
 .tabs__labels li a.active {
   border-bottom-color: #203B4E;
   background: #203B4E;
   color: #fff;
 }
-​
+
 .tabs__content {
   padding: 25px;
   background: #203B4E;
   color: #fff;
 }
-​
+
 .tabs__content a {
   color: #fff;
   text-decoration: underline;
 }
-
 /* Tabs
    ========================================================================== */
 .autocomplete {
@@ -461,8 +459,8 @@ body {
   padding: 20px;
   margin-left: -300px;
 }
-​
-input[type=text] {
+
+.autocomplete input[type=text] {
   text-align: center;
   font: inherit;
   border: 6px solid #203B4E;
@@ -475,7 +473,7 @@ input[type=text] {
   color: #7B8585;
   margin: 0 auto 20px;
 }
-​
+
 .autocomplete ul {
   list-style: none;
   display: inline-block;
@@ -483,7 +481,7 @@ input[type=text] {
   width: 100%;
   padding-left: 0;
 }
-​
+
 .autocomplete li {
   display: block;
   padding: 15px 20px;
@@ -493,7 +491,7 @@ input[type=text] {
   position: relative;
   transition: 0.3s;
 }
-​
+
 .autocomplete li a {
   float: right;
   right: 20px;
@@ -501,7 +499,7 @@ input[type=text] {
   line-height: 16px;
   color: #969d9d;
 }
-​
+
 .autocomplete li:hover {
   background-color: #203B4E;
   color: #fff;
