Answer key for tabs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -450,7 +450,7 @@ body {
   color: #fff;
   text-decoration: underline;
 }
-/* Tabs
+/* Filter
    ========================================================================== */
 .autocomplete {
   left: 50%;
